RESOLVED FIXED154900
The most aggressive form of RegExpTest/RegExpExec should speculate more aggressively than just cell
https://bugs.webkit.org/show_bug.cgi?id=154900
Summary The most aggressive form of RegExpTest/RegExpExec should speculate more aggre...
Filip Pizlo
Reported 2016-03-01 19:35:54 PST
Things.
Attachments
work in progress (12.47 KB, patch)
2016-03-05 14:23 PST, Filip Pizlo
no flags
the patch (25.95 KB, patch)
2016-03-05 15:12 PST, Filip Pizlo
saam: review+
patch for landing (25.89 KB, patch)
2016-03-05 16:16 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2016-03-05 14:23:54 PST
Created attachment 273098 [details] work in progress
Filip Pizlo
Comment 2 2016-03-05 15:12:07 PST
Created attachment 273100 [details] the patch
WebKit Commit Bot
Comment 3 2016-03-05 15:13:52 PST
Attachment 273100 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGOperations.cpp:629: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 4 2016-03-05 15:28:18 PST
Comment on attachment 273100 [details] the patch LGTM
Filip Pizlo
Comment 5 2016-03-05 16:16:36 PST
Created attachment 273107 [details] patch for landing
WebKit Commit Bot
Comment 6 2016-03-05 16:19:17 PST
Attachment 273107 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGOperations.cpp:629: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 7 2016-03-05 16:48:32 PST
Note You need to log in before you can comment on or make changes to this bug.